---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nderive total = case [total < 10 => total * 2, true => total]\nselect { customer_id, invoice_id, total }\ntake 5\nappend (\n  from invoice_items\n  derive unit_price = case [unit_price < 1 => unit_price * 2, true => unit_price]\n  select { invoice_line_id, invoice_id, unit_price }\n  take 5\n)\nselect { a = customer_id * 2, b = math.round 1 (invoice_id * total) }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.prql
---
from invoices
derive total = case [
  total < 10 => total * 2,
  true => total,
]
select {customer_id, invoice_id, total}
take 5
append (
  from invoice_items
  derive unit_price = case [
    unit_price < 1 => unit_price * 2,
    true => unit_price,
  ]
  select {invoice_line_id, invoice_id, unit_price}
  take 5
)
select {
  a = customer_id * 2,
  b = math.round 1 invoice_id * total,
}
